--- a/ch4pkeditorM/ch4pkeditorM.csproj
+++ b/ch4pkeditorM/ch4pkeditorM.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ch4pkeditorM</RootNamespace>
-    <AssemblyName>ch4pkeditorM</AssemblyName>
+    <AssemblyName>ch4pkeditorM_rev_1</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
